--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@ course- COMP125-s2016-MidTerm-300871205 -->
             <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/folegandros.jpg" alt="Folegandros">
             <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Folegandros">
                 <!-- Inject your Folegandros paragraph here -->
+                  <h1 id= "secondTitle"></h1>
+    <div id= "content2"></div>
             </p>
         </article>
         <hr>
@@ -76,6 +78,8 @@ course- COMP125-s2016-MidTerm-300871205 -->
             <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/alonissos.jpg" alt="Alonissos">
             <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Alonissos">
                 <!-- Inject your Alonissos paragraph here -->
+                  <h1 id= "thirdTitle"></h1>
+    <div id= "content3"></div>
             </p>
         </article>
         <hr>
@@ -85,6 +89,8 @@ course- COMP125-s2016-MidTerm-300871205 -->
             <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/spetses.jpg" alt="Spetses">
             <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Spetses">
                 <!-- Inject your Spetses paragraph here -->
+                  <h1 id= "fourthTitle"></h1>
+    <div id= "content4"></div>
             </p>
         </article>
         <hr>
@@ -94,6 +100,8 @@ course- COMP125-s2016-MidTerm-300871205 -->
             <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/amorgos.jpg" alt="Amorgos">
             <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Amorgos">
                 <!-- Inject your Amorgos paragraph here -->
+                  <h1 id= "fifthTitle"></h1>
+    <div id= "content5"></div>
             </p>
         </article>
         <hr>
@@ -103,6 +111,8 @@ course- COMP125-s2016-MidTerm-300871205 -->
             <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/syros.jpg" alt="Syros">
             <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Syros">
                 <!-- Inject your Syros paragraph here -->
+                  <h1 id= "sixthTitle"></h1>
+    <div id= "content6"></div>
             </p>
         </article>
         <hr>
@@ -112,6 +122,8 @@ course- COMP125-s2016-MidTerm-300871205 -->
             <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/milos.jpg" alt="Milos">
             <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Milos">
                 <!-- Inject your Milos paragraph here -->
+                  <h1 id= "seventhTitle"></h1>
+    <div id= "content7"></div>
             </p>
         </article>
         <hr>
@@ -121,6 +133,8 @@ course- COMP125-s2016-MidTerm-300871205 -->
             <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/hydra.jpg" alt="Hydra">
             <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Hydra">
                 <!-- Inject your Hydra paragraph here -->
+                  <h1 id= "eigthTitle"></h1>
+    <div id= "content8"></div>
             </p>
         </article>
         <hr>
@@ -131,6 +145,8 @@ course- COMP125-s2016-MidTerm-300871205 -->
             <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/ithaca.jpg" alt="Ithaca">
             <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Ithaca">
                 <!-- Inject your Ithaca paragraph here -->
+                  <h1 id= "ninthTitle"></h1>
+    <div id= "content9"></div>
             </p>
         </article>
         <hr>
@@ -140,6 +156,8 @@ course- COMP125-s2016-MidTerm-300871205 -->
             <img class="col-md-10 col-xs-offset-1 col-xs-10" src="Assets/images/gavdos.jpg" alt="Gavdos">
             <p class="col-md-10 col-xs-offset-1 col-xs-10" id="Gavdos">
                 <!-- Inject your Gavdos paragraph here -->
+                  <h1 id= "tenthTitle"></h1>
+    <div id= "content10"></div>
             </p>
         </article>
         <hr>
