--- a/index.html
+++ b/index.html
@@ -166,8 +166,20 @@ course- COMP125-s2016-MidTerm-300871205 -->
     <!-- CONTACT SECTION -->
     <div class="container">
         <section id="contact" class="row">
-
+<!--css section -->
+ <link rel="stylesheet"" href ="Scripts\lib\font-awesome\css\font-awesome.css">
+ <link rel="stylesheet" href ="Scripts\lib\font-awesome\css">
+ <link rel="stylesheet" href ="Scripts\lib\bootstrap\dist\css\bootstrap.css">
+ <link rel="stylesheet" href ="Scripts\lib\bootstrap\dist\css\bootstrap-theme.css">
             <div class="col-md-offset-2 col-md-8 col-xs-offset-1 col-xs-10">
+                            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+                    aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
 
                 <div class="panel panel-primary">
                     <div class="panel-heading">
